# samd-board

firmware/samd-board-minimal/: .gitignore  CMakeLists.txt  openocd.cfg
firmware/samd-board-minimal/src/: main.c  pinout.h
firmware/samd-board-minimal/src/drv/: clocks.c  clocks.h  gpio.c  gpio.h  systick.c  systick.h  usart.c  usart.h
hardware/board/: .gitignore  _autosave-samd-board.sch  fp-info-cache  samd-board  samd-board-cache.lib  samd-board.kicad_pcb  samd-board.pro  samd-board.sch  samd-board.xml
